Move field management to dedicated class

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 target_sources(FluidLib
 	PRIVATE
+        "${CMAKE_CURRENT_LIST_DIR}/device/field_manager.cu"
         "${CMAKE_CURRENT_LIST_DIR}/device/fluid_sim.cu"
         "${CMAKE_CURRENT_LIST_DIR}/device/gl_interop.cu"
         "${CMAKE_CURRENT_LIST_DIR}/device/sources.cu"
