--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,8 @@ target_sources(FluidLib
         "${CMAKE_CURRENT_LIST_DIR}/device/gl_interop.cu"
         "${CMAKE_CURRENT_LIST_DIR}/device/sources.cu"
 
+        "${CMAKE_CURRENT_LIST_DIR}/render/field_renderer.cpp"
+
         "${CMAKE_CURRENT_LIST_DIR}/ui/menu.cpp"
         
         "${CMAKE_CURRENT_LIST_DIR}/utils/cuda_utils.cu")
