--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,7 +2,8 @@ target_sources(FluidLib
 	PRIVATE
         "${CMAKE_CURRENT_LIST_DIR}/device/field_manager.cu"
 
-        "${CMAKE_CURRENT_LIST_DIR}/render/field_renderer.cpp"
+        "${CMAKE_CURRENT_LIST_DIR}/render/renderer.cpp"
+        "${CMAKE_CURRENT_LIST_DIR}/render/texture.cpp"
 
         "${CMAKE_CURRENT_LIST_DIR}/ui/menu.cpp"
         
